# Hackathon-II_The-Evolution-of-Todo-App-phase-4

./: .gitignore  KUBERNETES-DEPLOYMENT.md  README.md  minikube-troubleshooting.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  fix_db.py  pyproject.toml  requirements.txt  test_agents.py  test_agents_basic.py  test_chat_functionality.py  test_end_to_end.py  test_final_verification.py  test_full_integration.py  test_import.py  test_server_start.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  7f3907937650_add_chat_models.py
backend/src/: agents.py  config.py  main.py  mcp_server.py
backend/tests/: conftest.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
helm/todo/: Chart.yaml  values.yaml
history/: phase-4-completion.md  phase-4-final-completion.md  phase-4-log.md
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  postgresql.yaml  secrets.yaml
specs/001-todo-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-webapp/: plan.md  spec.md  tasks.md
specs/003-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/phase-4/: plan.md  spec.md  tasks.md
tests/integration/: test_category_list.py  test_cli_us1.py  test_cli_us2.py  test_cli_us3.py
tests/unit/: test_task_service_us1.py  test_task_service_us2.py  test_task_service_us3.py
(+98 files in other folders)
