[project]
name = "todo-console"
version = "0.1.0"
description = "Phase I Todo In-Memory Python CLI App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C90", "T20"]
ignore = []

[project.scripts]
todo = "todo.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
